# KeyFrameSystem

./: CMakeLists.txt  CMakePresets.json  README.md  setup.sh  vcpkg.json
include/motion/: Mesh.h  MotionController.h  Renderer.h  Utils.h
src/: main.cpp  main1.cpp
src/motion/: Mesh.cpp  MotionController.cpp  Renderer.cpp  Utils.cpp
